# gc_ope

./: .gitignore  README.md  main.py  pyproject.toml
configs/env_configs/flycraft/: env_config_for_ppo_easy.json  env_config_for_sac_easy.json
configs/evaluate/: config.yaml
configs/evaluate/env/: flycraft_for_ppo.yaml  flycraft_for_sac.yaml  my_ant_maze_u.yaml  my_ant_maze_u_dense.yaml  my_point_maze_for_ppo.yaml  my_point_maze_for_sac.yaml  my_push.yaml  my_reach_for_ppo.yaml  my_reach_for_sac.yaml  my_slide.yaml
configs/evaluate/eval_cfg/: flycraft_easy_random_dg_set.yaml  my_ant_maze_u_dense_random_dg_set.yaml  my_slide_random_dg_set.yaml
configs/train/: config.yaml
configs/train/algo/: her_for_flycraft.yaml  her_for_my_antmaze.yaml  her_for_my_pointmaze.yaml  her_for_my_push.yaml  her_for_my_reach.yaml  ppo_for_flycraft.yaml  ppo_for_my_antmaze.yaml  ppo_for_my_push.yaml  (+7 more)
dev_logs/: OPE_roadmaps.md  TODO_list.md  changelogs.md  env_README.md
scripts/: evaluate_flycraft.py  evaluate_my_point_maze.py  evaluate_my_reach.py  sac_from_eval.ipynb  train.py
scripts/evaluate_ckpt/: evaluate_flycraft.py  evaluate_my_ant_maze.py  evaluate_my_point_maze.py  evaluate_my_push_slide.py  evaluate_my_reach.py
scripts/train_policy/: train.py
tests/algorithm/: test_my_evaluate_policy.py  try.ipynb
tests/evaluate/: test_evaluate_result_container.py  test_evaluator_kde.py  test_kde_dist.py  test_kde_dist_on_antmaze.py  test_kde_dist_on_flycraft.py  test_kde_dist_on_pointmaze.py  test_kde_dist_on_push.py  test_kde_dist_on_reach.py  test_kde_dist_on_slide.py  try.py
(+307 files in other folders)
